상담정보관리

--- a/pages/layout/header.html
+++ b/pages/layout/header.html
@@ -1,3 +1,16 @@
-<header id="header">
-    Header
+<header id="header" class="web-header">
+    <a href="#" class="left-group">
+        <span class="logo">효성에프엠에스</span><span class="logo-info">통합업무시스템</span>
+    </a>
+    <div class="right-group">
+        <div class="profile-box">
+            <i class="ico-md profile">프로필</i>
+            <strong class="name">홍길동</strong>&nbsp;님
+        </div>
+        <div class="timer-box">
+            <span class="timer-set"><i class="ico-xs time">타이머</i><span id="timer">09:30</span></span>
+            <button type="button" class="btn-text time-add">로그인연장</button>
+        </div>
+        <button type="button" class="btn-logout">로그아웃</button>
+    </div>
 </header>
