--- a/resources/css/scss/_colors.scss
+++ b/resources/css/scss/_colors.scss
@@ -8,6 +8,17 @@
 //************************************************************
 @charset "utf-8";
 
+$Default: #222;
+$gray_dark: #444;
+$gray_dark2: #555;
+$Dot-bg: #aaa;
+$Light-gray: #999;
+$Btn-light-border: #e0e5ec;
+$Blue: #3064b8;
+$Gray: #777;
+$Form-color: #555;
+
+
 // Common
 $white: #fff;
 $black: #000;
@@ -35,3 +46,4 @@ $TableLine: #e4e4e4;
 $lnbBG: #f4f6f9;
 $lnbLine: #ddd;
 $SearchLine: #eee;
+
