--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -6,7 +6,7 @@
 //* @content : 공통 레이아웃 설정
 //* @author : bhlbest20@gmail.com
 //************************************************************
-@charset "utf-8";
+// @charset "utf-8";
 
 // Common
 * {
@@ -17,6 +17,9 @@ html, body {
     font-family: $fontFamily;
     padding: 0;
     margin: 0;
+    width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 html {
@@ -27,4 +30,26 @@ body {
     min-height: 100%;
     background-color: $BG;
 }
+ul, li, ol {
+    padding: 0; margin: 0;
+}
+li  {
+    list-style: none;
+}
 
+a {
+    text-decoration: none;
+    color: #222;
+}
+button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.ml-4 {
+    margin-left: 4px !important;
+}
+.ml-8 {
+    margin-left: 8px !important;
+}
