--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -6,4 +6,296 @@
 //* @content : 개별 레이아웃 설정
 //* @author : bhlbest20@gmail.com
 //************************************************************
-@charset "utf-8";
+// @charset "utf-8";
+.wrap {
+	width: 100%; 
+	height: 100%; 
+	overflow: hidden;
+}
+
+.web-wrapper {
+	display: flex;
+    flex-direction: column;
+	overflow: hidden;
+	min-height: 100%;
+	height: 100%;
+	min-width: 1920px;
+	-webkit-overflow-scrolling: touch;
+}
+.web-container {
+	display: flex;
+	width: calc(100% - 220px);
+	height: 100%;
+	margin-left: 220px;
+	overflow: auto;
+}
+.main-content {
+	min-width: 1700px;
+	flex: 1;
+	padding: 0 30px;
+	background-color: $BG;
+}
+
+
+/*
+* ------------------------------
+* Header
+* ------------------------------
+*/
+
+.web-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 rem(30) 0 rem(20);
+    height: rem(60);
+    background: #0e4194;
+    .left-group {
+        display: flex;
+        align-items: center;
+    }
+    .logo {
+        display: inline-block;
+        @include hide-text;
+        background: #fff;
+        width: 124px; 
+        height: 18px;
+        &-info {
+            color: $white;
+            margin-left: 4px;
+            font-size: rem(16);
+            line-height: rem(26);
+            letter-spacing: -0.8px;
+            font-weight: 500;
+        }
+    }
+    .right-group {
+        display: flex;
+        align-items: center;
+    }
+} 
+.profile-box {
+    @include GNB;
+    display: flex;
+    align-items: center;
+    .name {
+        margin-left: 6px;
+    }
+}
+.timer-box {
+    display: flex;
+    align-items: center;
+    height: 28px;
+    margin-left: 14px;
+    padding: 0 10px 0 12px;
+    background-color: $Blue;
+    border-radius: 3px;
+    .btn-text {
+        @include btn;
+        text-decoration: underline;
+    }
+    > * + * {
+        margin-left: 8px;
+    }
+}
+.timer-set {
+    display: flex;
+    align-items: center;
+    color: $State;
+    font-size: 14px;
+    line-height: 26px;
+    letter-spacing: -0.7px;
+    > * + * {
+        margin-left: 5px;
+    }
+}
+
+/*
+* ------------------------------
+* Container
+* ------------------------------
+*/
+
+
+.title-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 32px;
+    margin: 20px 0;
+    .left-group, .right-group {
+        display: flex;
+        align-items: center;
+    }
+}
+.main-title {
+    @include Page_main_title;
+}
+
+/*
+* ------------------------------
+* Sidebar
+* ------------------------------
+*/
+
+.web-sidebar {
+	display: flex;
+    flex-direction: column;
+	position: fixed;
+	left: 0;
+	min-width: 220px;
+	width: 220px;
+	height: calc(100% - 60px);
+	background-color: #fff;
+	border-right: 1px solid #ddd;
+	transition: margin 0.2s;
+	z-index: 10;
+	.sidebar-head {
+		position: relative;
+		padding: 22px 0 16px;
+		border-bottom: 1px solid $lnbLine;
+		.main-menu {
+			@include LNB_1depth_Default;
+			display: flex;
+			align-items: center;
+			padding: 0 20px 7px;
+			font-weight: 500;
+			[class*=ico] {
+				margin-right: 8px;
+			}
+		}
+		.sub-menu a { 
+            @include LNB_2depth_Defaultbookmark;
+            display: block;
+            padding: 0 rem(20) 0 rem(49); 
+        
+		}
+	}
+	.sidebar-body {
+		flex: 1;
+		overflow: auto;
+		// border-top: 1px solid #ddd;
+	}
+	.sidebar-foot {
+		padding: 0 10px 10px;
+		.ico-sm.mail {
+			background-color: $white;
+		}
+		.btn-box {
+			> * + * {
+				margin-left: 6px;
+			}
+		}
+		.btn {
+			height: 40px;
+			padding: 0 32px;
+		}
+	}
+}
+
+/* 사이드바 */
+.sidebar {
+	&-1depth {
+		display: flex;
+		align-items: center;
+		position: relative;
+		height: 40px;
+		padding: 0 20px;
+		&::after {
+			display: inline-block;
+			content: "";
+		}
+		[class*=ico] {
+			margin-right: 8px;
+		}
+		&.active::before {
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0; 
+			width: 4px; 
+			height: 100%;
+			background-color: $Main;
+		}
+	}
+	&-2depth {
+		display: none;
+		background-color: $lnbBG;
+		
+		ul {
+			position: relative;
+			padding: 17px 0;
+			border-bottom: 1px solid #ddd;
+			&::before {
+				position: absolute;
+				top: 0;
+				left: 37px;
+				content: "";
+				display: block;
+				width: 2px;
+				height: 100%;
+				background-color: #f5f5f5;
+				border-radius: 50%;
+			}
+		}
+		a {
+			@include LNB_2depth_Default;
+			display: flex;
+			position: relative;
+			padding-left: 49px;
+			transition: color 0.3s ease;
+			&:hover {
+				color: $Main;
+				font-weight: 500;
+				&::before {
+					background-color: $Main;
+				}
+			}
+			&::before {
+				position: absolute;
+				top: 50%;
+				left: 28px;
+				content: "";
+				display: block;
+				width: 4px;
+				height: 4px;
+				margin-top: -2px;
+				background-color: $Dot-bg;
+				border-radius: 50%;
+			}
+		}
+	}
+}
+/* 사이드바 - 2뎁스 메뉴 */
+.has-submenu.active .sidebar-2depth {
+	display: block;
+}
+.has-submenu .sidebar-1depth::after {
+	display: inline-block;
+	content: "";
+	position: absolute;
+	top: 50%;
+	margin-top: -7px;
+	right: 20px;
+	width: 15px;
+	height: 15px;
+	background-image: url('./../images/icon/xs-15/icon_arrow_down@3x.png');
+	background-repeat: no-repeat;
+	background-size: 15px 15px;
+	text-align: center;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.has-submenu.active .sidebar-1depth::after {
+	transform: rotate(180deg);
+}
+/* 사이드바 - 3뎁스 메뉴 */
+.sidebar-3depth {
+	display: none;
+}
+.sidebar-2depth.active .sidebar-3depth {
+	display: block;
+}
+
+
