서버->로컬 환경 변경, 디자인 수정

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -936,7 +936,6 @@ button {
 
 .profile-box {
   font-size: 15px;
-  font-weight: 500;
   line-height: 1.73;
   letter-spacing: -0.75px;
   color: #fff;
@@ -945,6 +944,7 @@ button {
 }
 .profile-box .name {
   margin-left: 6px;
+  font-weight: 500;
 }
 
 .timer-box {
@@ -989,7 +989,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 32px;
+  height: 32px;
   margin: 20px 0;
 }
 .title-box .left-group, .title-box .right-group {
@@ -1025,31 +1025,27 @@ button {
 }
 .web-sidebar .sidebar-head {
   position: relative;
-  padding: 22px 0 16px;
+  padding: 12px 0 19px;
   border-bottom: 1px solid #ddd;
 }
 .web-sidebar .sidebar-head .main-menu {
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.73;
-  letter-spacing: -0.75px;
-  color: #222222;
   display: flex;
   align-items: center;
-  padding: 0 20px 7px;
+  padding: 0 20px;
+  font-size: 15px;
+  line-height: 40px;
   font-weight: 500;
 }
 .web-sidebar .sidebar-head .main-menu [class*=ico] {
-  margin-right: 8px;
+  margin-right: 10px;
 }
 .web-sidebar .sidebar-head .sub-menu a {
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 2;
-  letter-spacing: -0.75px;
-  color: #777777;
   display: block;
   padding: 0 1.25rem 0 3.0625rem;
+  color: #777;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: -0.7px;
 }
 .web-sidebar .sidebar-body {
   flex: 1;
@@ -1076,6 +1072,8 @@ button {
   position: relative;
   height: 40px;
   padding: 0 20px;
+  color: #222;
+  font-size: 15px;
 }
 .sidebar-1depth::after {
   display: inline-block;
@@ -1096,6 +1094,7 @@ button {
 }
 .sidebar-2depth {
   display: none;
+  padding: 4px 0;
   background-color: #f4f6f9;
 }
 .sidebar-2depth ul {
@@ -1115,14 +1114,13 @@ button {
   border-radius: 50%;
 }
 .sidebar-2depth a {
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 2.57;
-  letter-spacing: -0.7px;
-  color: #777777;
   display: flex;
   position: relative;
   padding-left: 49px;
+  color: #555;
+  font-size: 14px;
+  line-height: 36px;
+  letter-spacing: -0.7px;
   transition: color 0.3s ease;
 }
 .sidebar-2depth a:hover {
@@ -1199,7 +1197,7 @@ button {
 .breadcrumb .breadcrumb-item {
   display: flex;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
   color: #999;
 }
 .breadcrumb .breadcrumb-item.active {
@@ -1232,7 +1230,6 @@ button {
 .table-content thead th, .table-content thead td {
   font-size: 14px;
   font-weight: 500;
-  line-height: 3.21;
   letter-spacing: -0.7px;
   color: #555555;
   border: 1px solid #ddd;
@@ -1241,7 +1238,6 @@ button {
 .table-content tbody th, .table-content tbody td {
   font-size: 14px;
   font-weight: normal;
-  line-height: 2.64;
   letter-spacing: -0.7px;
   color: #222222;
   background: #fff;
@@ -1267,6 +1263,14 @@ table {
 
 thead th {
   text-align: center;
+}
+
+tr td {
+  transition: background 0.3s ease;
+}
+
+tr:hover td {
+  background-color: #eff2f7;
 }
 
 .text-center th,
@@ -1302,13 +1306,8 @@ td .form-box, th .form-box {
 }
 
 .amount-set {
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 1.86;
-  letter-spacing: -0.7px;
-  color: #0e4194;
   color: #aaa;
+  font-size: 14px;
   font-weight: 400;
   line-height: 1;
 }
@@ -1317,10 +1316,10 @@ td .form-box, th .form-box {
   font-weight: bold;
 }
 .amount-set .dash {
-  margin: 0 2px;
+  margin: 0 1px;
 }
 .amount-set .unit {
-  margin-left: 2px;
+  margin-left: 1px;
 }
 
 .table-bottom {
@@ -1402,9 +1401,10 @@ td .form-box, th .form-box {
   height: 28px;
   color: #777;
   font-size: 14px;
-  line-height: 26px;
+  line-height: 28px;
   letter-spacing: -0.7px;
   white-space: nowrap;
+  font-weight: 500;
 }
 .search-control .form-radio input[type=radio] + label {
   display: flex;
@@ -1448,11 +1448,6 @@ td .form-box, th .form-box {
 }
 
 [class*=input-]:not(.input-group):not(.input-search) {
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.73;
-  letter-spacing: -0.75px;
-  color: #555555;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
@@ -1462,6 +1457,10 @@ td .form-box, th .form-box {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 3px;
+  color: #555;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: -0.7px;
   transition: 0.3s ease-in-out;
 }
 [class*=input-]:not(.input-group):not(.input-search):focus {
@@ -1482,9 +1481,7 @@ td .form-box, th .form-box {
   color: #666666;
 }
 [class*=input-]:not(.input-group):not(.input-search)::placeholder {
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.73;
+  font-size: 14px;
   letter-spacing: -0.75px;
   color: #aaaaaa;
 }
@@ -1521,11 +1518,6 @@ select::-ms-expand {
 }
 
 [class*=select-] {
-  font-size: 15px;
-  font-weight: normal;
-  line-height: 1.73;
-  letter-spacing: -0.75px;
-  color: #555555;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
@@ -1539,6 +1531,10 @@ select::-ms-expand {
   background-position: calc(100% - 10px) 50%;
   background-size: 15px 15px;
   border-radius: 3px;
+  color: #555;
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: -0.7px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -1700,6 +1696,7 @@ select::-ms-expand {
   position: relative;
   flex: 0 1 auto;
   width: auto;
+  height: 28px;
   padding: 0 20px;
   background-color: #0e4194;
   border-radius: 0.1875rem;
@@ -1789,6 +1786,9 @@ select::-ms-expand {
 .btn-period-box .btn + .btn {
   margin-left: 0;
   border-left: 0;
+}
+.btn-period-box .btn + .btn.active {
+  margin-left: -1px;
 }
 
 [class*=ico] {
