--- a/resources/css/scss/component/_button.scss
+++ b/resources/css/scss/component/_button.scss
@@ -12,6 +12,7 @@
     position: relative;
     flex: 0 1 auto;
     width: auto;
+    height: 28px;
     padding: 0 20px;
     background-color: $Main;
     border-radius: rem(3);
@@ -109,6 +110,9 @@
         + .btn {
             margin-left: 0;
             border-left: 0;
+            &.active {
+                margin-left: -1px;
+            }
         }
     }
 }
