--- a/resources/css/scss/component/_select.scss
+++ b/resources/css/scss/component/_select.scss
@@ -3,7 +3,7 @@ select::-ms-expand {
 }
 
 [class*=select-] {
-	@include input_data;
+	// @include input_data;
 	flex-grow: 1;
 	flex-shrink: 1;
 	flex-basis: auto;
@@ -17,6 +17,10 @@ select::-ms-expand {
 	background-position: calc(100% - 10px) 50%;
 	background-size: 15px 15px;
 	border-radius: 3px;
+	color: $gray_dark2;
+	font-size: 14px;
+	line-height: 28px;
+	letter-spacing: -0.7px;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
