--- a/resources/css/scss/component/_table.scss
+++ b/resources/css/scss/component/_table.scss
@@ -44,6 +44,12 @@ table {
 thead th {
 	text-align: center;
 }
+tr td {
+    transition: background 0.3s ease;
+}
+tr:hover td {
+    background-color: $TableBG1;
+}
 .text-center th,
 .text-center td {
 	text-align: center !important;
@@ -74,8 +80,8 @@ td .form-box, th .form-box {
     margin: 12px 0 8px;
 }
 .amount-set {
-    @include Num;
     color: $Dot-bg;
+    font-size: 14px;
     font-weight: 400;
     line-height: 1;
     .amount {
@@ -85,10 +91,10 @@ td .form-box, th .form-box {
         }
     }
     .dash {
-        margin: 0 2px;
+        margin: 0 1px;
     }
     .unit {
-        margin-left: 2px;
+        margin-left: 1px;
     }
 }
 
