--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -199,7 +199,7 @@
 		}
 		.btn {
 			height: 40px;
-			padding: 0 32px;
+			padding: 0 30px;
 		}
 	}
 }
@@ -236,7 +236,7 @@
 	&-2depth {
 		display: none;
 		padding: 4px 0;
-		background-color: $lnbBG;
+		background-color: $TableBG1;
 		
 		ul {
 			position: relative;
