--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -222,16 +222,6 @@
 		[class*=ico] {
 			margin-right: 8px;
 		}
-		&.active::before {
-			content: '';
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0; 
-			width: 4px; 
-			height: 100%;
-			background-color: $Main;
-		}
 	}
 	&-2depth {
 		display: none;
@@ -289,6 +279,16 @@
 /* 사이드바 - 2뎁스 메뉴 */
 .has-submenu.active .sidebar-2depth {
 	display: block;
+}
+.has-submenu.active .sidebar-1depth::before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0; 
+	width: 4px; 
+	height: 100%;
+	background-color: $Main;
 }
 .has-submenu .sidebar-1depth::after {
 	display: inline-block;
