--- a/resources/css/scss/_global.scss
+++ b/resources/css/scss/_global.scss
@@ -6,7 +6,7 @@
 //* @content : 공통 레이아웃 설정
 //* @author : bhlbest20@gmail.com
 //************************************************************
-@charset "utf-8";
+// @charset "utf-8";
 
 // Common
 * {
@@ -17,6 +17,9 @@ html, body {
     font-family: $fontFamily;
     padding: 0;
     margin: 0;
+    width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 html {
@@ -25,6 +28,35 @@ html {
 
 body {
     min-height: 100%;
-    background-color: $BG;
+    background-color: $bg;
+}
+ul, li, ol {
+    padding: 0; margin: 0;
+}
+li  {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: #222;
+}
+div, p, span, a, button,  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+    font-size: inherit;
+    margin: 0; padding: 0;
+}
+button {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+button, input, textarea {
+    outline: none;
+}
+.ml-4 {
+    margin-left: 4px !important;
+}
+.ml-8 {
+    margin-left: 8px !important;
 }
 
