--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -6,4 +6,282 @@
 //* @content : 개별 레이아웃 설정
 //* @author : bhlbest20@gmail.com
 //************************************************************
-@charset "utf-8";
+// @charset "utf-8";
+.wrap {
+	width: 100%; 
+	height: 100%; 
+	overflow: hidden;
+}
+
+.wrap {
+	display: flex;
+    flex-direction: column;
+	overflow: hidden;
+	min-height: 100%;
+	height: 100%;
+	min-width: 1920px;
+	-webkit-overflow-scrolling: touch;
+}
+.content-main {
+	display: flex;
+	width: calc(100% - 220px);
+	height: 100%;
+	margin-left: 220px;
+	overflow: auto;
+}
+.content-wrap {
+	min-width: 1700px;
+	flex: 1;
+	padding: 0 30px;
+	background-color: $bg;
+}
+
+
+/*
+* ------------------------------
+* Header
+* ------------------------------
+*/
+
+.web-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 rem(30) 0 rem(20);
+    height: rem(60);
+    background: #0e4194;
+    .left-group {
+        display: flex;
+        align-items: center;
+    }
+    .logo {
+        display: inline-block;
+        @include hide-text;
+        background: #fff;
+        width: 124px; 
+        height: 18px;
+        &-info {
+			@include font-size-md;
+            color: $white;
+            margin-left: 4px;
+            font-weight: 500;
+        }
+    }
+    .right-group {
+        display: flex;
+        align-items: center;
+    }
+} 
+.profile-box {
+	@include font-size-sm;
+    color: $white;
+    display: flex;
+    align-items: center;
+    .name {
+        margin-left: 6px;
+		font-weight: 500;
+    }
+}
+.timer-box {
+    display: flex;
+    align-items: center;
+    height: 28px;
+    margin-left: 14px;
+    padding: 0 10px 0 12px;
+    background-color: $blue;
+    border-radius: 3px;
+    .btn-text {
+        @include font-size-sm;
+        text-decoration: underline;
+    }
+    > * + * {
+        margin-left: 8px;
+    }
+}
+.timer-set {
+	@include font-size-sm;
+    display: flex;
+    align-items: center;
+    color: $state;
+    > * + * {
+        margin-left: 5px;
+    }
+}
+
+/*
+* ------------------------------
+* Container
+* ------------------------------
+*/
+
+
+/*
+* ------------------------------
+* Sidebar
+* ------------------------------
+*/
+
+.sidebar-wrap {
+	display: flex;
+    flex-direction: column;
+	position: fixed;
+	left: 0;
+	min-width: 220px;
+	width: 220px;
+	height: calc(100% - 60px);
+	background-color: #fff;
+	border-right: 1px solid #ddd;
+	transition: margin 0.2s;
+	z-index: 10;
+	.sidebar-head {
+		position: relative;
+		padding: 12px 0 19px;
+		border-bottom: 1px solid $lnbLine;
+		.main-menu {
+			display: flex;
+			align-items: center;
+			padding: 0 20px;
+			font-size: 15px;
+			line-height: 40px;
+			font-weight: 500;
+			.ico {
+				margin-right: 10px;
+			}
+		}
+		.sub-menu a { 
+			@include font-size-sm;
+            display: block;
+            padding: 0 20px 0 49px; 
+			color: $gray-7;
+		}
+	}
+	.sidebar-body {
+		flex: 1;
+		overflow: auto;
+	}
+	.sidebar-foot {
+		padding: 10px;
+		.ico-sm.mail {
+			background-color: $white;
+		}
+		.btn-box {
+			> * + * {
+				margin-left: 6px;
+			}
+		}
+		.h-btn {
+			height: 40px;
+			padding: 0 30px;
+		}
+	}
+}
+
+/* 사이드바 */
+.sidebar {
+	&-1depth {
+		@include font-size-menu;
+		display: flex;
+		align-items: center;
+		position: relative;
+		height: 40px;
+		padding: 0 20px;
+		color: $gray-2;
+		&::after {
+			display: inline-block;
+			content: "";
+		}
+		.ico {
+			margin-right: 8px;
+		}
+	}
+	&-2depth {
+		display: none;
+		padding: 4px 0;
+		background-color: $tableBG1;
+		ul {
+			position: relative;
+			padding: 17px 0;
+			border-bottom: 1px solid #ddd;
+			&::before {
+				position: absolute;
+				top: 0;
+				left: 37px;
+				content: "";
+				display: block;
+				width: 2px;
+				height: 100%;
+				background-color: #f5f5f5;
+				border-radius: 50%;
+			}
+		}
+		a {
+			@include font-size-sm;
+			display: flex;
+			position: relative;
+			padding-left: 49px;
+			color: $gray-5;
+			transition: color 0.3s ease;
+			&:hover {
+				color: $main;
+				font-weight: 500;
+				&::before {
+					background-color: $main;
+				}
+			}
+			&::before {
+				position: absolute;
+				top: 50%;
+				left: 28px;
+				content: "";
+				display: block;
+				width: 4px;
+				height: 4px;
+				margin-top: -2px;
+				background-color: $gray-a;
+				border-radius: 50%;
+			}
+		}
+	}
+}
+/* 사이드바 - 2뎁스 메뉴 */
+.has-submenu.active .sidebar-2depth {
+	display: block;
+}
+.has-submenu.active .sidebar-1depth::before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0; 
+	width: 4px; 
+	height: 100%;
+	background-color: $main;
+}
+.has-submenu .sidebar-1depth::after {
+	display: inline-block;
+	content: "";
+	position: absolute;
+	top: 50%;
+	margin-top: -7px;
+	right: 20px;
+	width: 15px;
+	height: 15px;
+	background-image: url('./../images/icon/xs-15/icon_arrow_down@3x.png');
+	background-repeat: no-repeat;
+	background-size: 15px 15px;
+	text-align: center;
+	-webkit-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.has-submenu.active .sidebar-1depth::after {
+	transform: rotate(180deg);
+}
+/* 사이드바 - 3뎁스 메뉴 */
+.sidebar-3depth {
+	display: none;
+}
+.sidebar-2depth.active .sidebar-3depth {
+	display: block;
+}
+
+
