--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -6,134 +6,121 @@
 //* @content : 개별 레이아웃 설정
 //* @author : bhlbest20@gmail.com
 //************************************************************
-// @charset "utf-8";
+
+/*
+* ------------------------------
+* Wrap
+* ------------------------------
+*/
 .wrap {
 	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-
-.wrap {
-	display: flex;
-    flex-direction: column;
-	overflow: hidden;
-	min-height: 100%;
-	height: 100%;
 	min-width: 1920px;
-	-webkit-overflow-scrolling: touch;
-}
-.content-main {
-	display: flex;
-	width: calc(100% - 220px);
 	height: 100%;
-	margin-left: 220px;
-	overflow: auto;
-}
-.content-wrap {
-	min-width: 1700px;
-	flex: 1;
-	padding: 0 30px;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	-webkit-overflow-scrolling: touch;
 	background-color: $bg;
 }
 
 
 /*
 * ------------------------------
-* Header
+* Container
 * ------------------------------
 */
-
-.web-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 rem(30) 0 rem(20);
-    height: rem(60);
-    background: #0e4194;
-    .left-group {
-        display: flex;
-        align-items: center;
-    }
-    .logo {
-        display: inline-block;
-        @include hide-text;
-        background: #fff;
-        width: 124px;
-        height: 18px;
-        &-info {
-			@include font-size-md;
-            color: $white;
-            margin-left: 4px;
-            font-weight: 500;
-        }
-    }
-    .right-group {
-        display: flex;
-        align-items: center;
-    }
+#container {
+	flex: 1;
+	display: flex;
 }
-.profile-box {
-	@include font-size-sm;
-	font-size: $base-font-size;
-    color: $white;
-    display: flex;
-    align-items: center;
-    .name {
-        margin-left: 6px;
-		font-weight: 500;
-    }
-}
-.timer-box {
-    display: flex;
-    align-items: center;
-    height: 28px;
-    margin-left: 14px;
-    padding: 0 10px 0 12px;
-    background-color: $blue;
-    border-radius: 3px;
-    .btn-text {
-        @include font-size-sm;
-        text-decoration: underline;
-    }
-    > * + * {
-        margin-left: 8px;
-    }
-}
-.timer-set {
-	@include font-size-sm;
-    display: flex;
-    align-items: center;
-    color: $state;
-    > * + * {
-        margin-left: 5px;
-    }
+.contents-wrap {
+	flex: 1 0;
+	padding: 20px 30px 30px;
 }
 
 /*
 * ------------------------------
-* Container
+* Header
 * ------------------------------
 */
-
+.header-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 rem(30) 0 rem(20);
+	height: rem(60);
+	background: #0e4194;
+	.left-group {
+		display: flex;
+		align-items: center;
+	}
+	.logo {
+		display: inline-block;
+		@include hide-text;
+		background: #fff;
+		width: 124px;
+		height: 18px;
+		&-info {
+			@include font-size-md;
+			color: $white;
+			margin-left: 4px;
+			font-weight: 500;
+		}
+	}
+	.right-group {
+		display: flex;
+		align-items: center;
+	}
+}
+.profile-box {
+	@include font-size-sm;
+	font-size: $base-font-size;
+	color: $white;
+	display: flex;
+	align-items: center;
+	.name {
+		margin-left: 6px;
+		font-weight: 500;
+	}
+}
+.timer-box {
+	display: flex;
+	align-items: center;
+	height: 28px;
+	margin-left: 14px;
+	padding: 0 10px 0 12px;
+	background-color: $blue;
+	border-radius: 3px;
+	.btn-text {
+		@include font-size-sm;
+		text-decoration: underline;
+	}
+	> * + * {
+		margin-left: 8px;
+	}
+}
+.timer-set {
+	@include font-size-sm;
+	display: flex;
+	align-items: center;
+	color: $state;
+	> * + * {
+		margin-left: 5px;
+	}
+}
 
 /*
 * ------------------------------
 * Sidebar
 * ------------------------------
 */
-
 .sidebar-wrap {
 	display: flex;
-    flex-direction: column;
-	position: fixed;
-	left: 0;
-	min-width: 220px;
-	width: 220px;
-	height: calc(100% - 60px);
+	flex-direction: column;
+	flex: 0 0 220px;
 	background-color: #fff;
 	border-right: 1px solid #ddd;
 	transition: margin 0.2s;
-	z-index: 10;
 	.sidebar-head {
 		position: relative;
 		padding: 12px 0 19px;
@@ -145,14 +132,14 @@
 			font-size: 15px;
 			line-height: 40px;
 			font-weight: 500;
-			.ico {
+			.h-ico {
 				margin-right: 10px;
 			}
 		}
 		.sub-menu a {
 			@include font-size-sm;
-            display: block;
-            padding: 0 20px 0 49px;
+			display: block;
+			padding: 0 20px 0 49px;
 			color: $gray-7;
 		}
 	}
@@ -162,7 +149,7 @@
 	}
 	.sidebar-foot {
 		padding: 10px;
-		.ico-sm.mail {
+		.h-ico.mail {
 			background-color: $white;
 		}
 		.btn-box {
@@ -191,7 +178,7 @@
 			display: inline-block;
 			content: "";
 		}
-		.ico {
+		.h-ico {
 			margin-right: 8px;
 		}
 	}
@@ -249,7 +236,7 @@
 	display: block;
 }
 .has-submenu.active .sidebar-1depth::before {
-	content: '';
+	content: "";
 	display: block;
 	position: absolute;
 	top: 0;
@@ -267,7 +254,7 @@
 	right: 20px;
 	width: 15px;
 	height: 15px;
-	background-image: url('./../images/icon/xs-15/icon_arrow_down@3x.png');
+	background-image: url("./../images/icon/xs-15/icon_arrow_down@3x.png");
 	background-repeat: no-repeat;
 	background-size: 15px 15px;
 	text-align: center;
@@ -284,5 +271,3 @@
 .sidebar-2depth.active .sidebar-3depth {
 	display: block;
 }
-
-
