캔도 버전변경 및 아이콘 png -> svg 변경

--- a/pages/layout/lnb.html
+++ b/pages/layout/lnb.html
@@ -85,7 +85,7 @@
     <div class="sidebar-foot">
         <div class="btn-box">
             <button type="button" class="h-btn"><i class="h-ico xsm mail">메일</i><span>나의 업무 보관함</span></button>
-            <button type="button" class="h-ico lnb-close">버튼</button>
+            <button type="button" class="h-btn lnb-close"><i class="h-ico xsm close">닫기</i></button>
         </div>
     </div>        
 </aside>
